--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
+		<h2 style="text-align: center;">Support Us with a Payment</h2>
+<a href="https://www.instamojo.com/@sabithvy/lf5b46d0939364b45aa412805a5ca8719/"
+   rel="im-checkout"
+   data-text="Pay Now"
+   data-css-style="color:#ffffff; background:#75c26a; width:300px; border-radius:6px; font-size:18px; padding:10px"
+   data-layout="vertical"></a>
+<script src="https://js.instamojo.com/v1/button.js"></script>
 	</body>
 </html>
